优化sapmles ，托管至 grpcserver

--- a/samples/DynamicTable.GrpcServer/DynamicTable.GrpcServer.csproj
+++ b/samples/DynamicTable.GrpcServer/DynamicTable.GrpcServer.csproj
@@ -7,12 +7,14 @@
   <ItemGroup>
     <PackageReference Include="Grpc.AspNetCore" Version="2.34.0" />
     <PackageReference Include="Grpc.AspNetCore.Web" Version="2.35.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="5.0.2" />
     <PackageReference Include="protobuf-net.Grpc.AspNetCore" Version="1.0.147" />
     <PackageReference Include="protobuf-net.Grpc.AspNetCore.Reflection" Version="1.0.147" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\DynamicTable.Shared\DynamicTable.Shared.csproj" />
+    <ProjectReference Include="..\DynamicTable.Wasm\DynamicTable.Wasm.csproj" />
   </ItemGroup>
 
 </Project>
