--- a/samples/DynamicTable.GrpcServer/Properties/launchSettings.json
+++ b/samples/DynamicTable.GrpcServer/Properties/launchSettings.json
@@ -3,8 +3,20 @@
     "DynamicTable.GrpcServer": {
       "commandName": "Project",
       "dotnetRunMessages": "true",
-      "launchBrowser": false,
-      "applicationUrl": "http://localhost:5000;https://localhost:5001",
+      "launchBrowser": true,
+      "applicationUrl": "https://localhost:5001;http://localhost:5000",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
+    },
+    "dotnet watch run debug": {
+      "commandName": "Executable",
+      "executablePath": "dotnet.exe",
+      "workingDirectory": "$(ProjectDir)",
+      "applicationUrl": "https://localhost:5001;http://localhost:5000",
+      "commandLineArgs": "watch run debug",
+      "launchBrowser": true,
+      "launchUrl": "https://localhost:5001",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
