优化目录结构
endpoints

--- a/samples/DynamicTable.GrpcServer/Properties/launchSettings.json
+++ b/samples/DynamicTable.GrpcServer/Properties/launchSettings.json
@@ -3,7 +3,8 @@
     "DynamicTable.GrpcServer": {
       "commandName": "Project",
       "dotnetRunMessages": "true",
-      "launchBrowser": true,
+      "launchBrowser": true, 
+      "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
@@ -13,6 +14,7 @@
       "commandName": "Executable",
       "executablePath": "dotnet.exe",
       "workingDirectory": "$(ProjectDir)",
+      "inspectUri": "{wsProtocol}://{url.hostname}:{url.port}/_framework/debug/ws-proxy?browser={browserInspectUri}",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "commandLineArgs": "watch run debug",
       "launchBrowser": true,
