--- a/src/DynamicTable.Grpc/DynamicTable.Grpc.csproj
+++ b/src/DynamicTable.Grpc/DynamicTable.Grpc.csproj
@@ -5,13 +5,18 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\DynamicTable.Shared\DynamicTable.Shared.csproj" />
-      <ProjectReference Include="..\DynamicTable\DynamicTable.csproj" />
+        <FrameworkReference Include="Microsoft.AspNetCore.App" />
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="Grpc.Net.Client.Web" Version="2.35.0-pre1" />
-      <PackageReference Include="protobuf-net.Grpc.ClientFactory" Version="1.0.147" />
+      <ProjectReference Include="..\DynamicTable.Shared\DynamicTable.Shared.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <PackageReference Include="Grpc.AspNetCore" Version="2.34.0" />
+        <PackageReference Include="Grpc.AspNetCore.Web" Version="2.35.0" />
+        <PackageReference Include="protobuf-net.Grpc.AspNetCore" Version="1.0.147" />
+        <PackageReference Include="protobuf-net.Grpc.AspNetCore.Reflection" Version="1.0.147" />
     </ItemGroup>
 
 </Project>
