--- a/src/DynamicTable/DynamicTable.csproj
+++ b/src/DynamicTable/DynamicTable.csproj
@@ -10,13 +10,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="5.0.2" />
-    <PackageReference Include="Grpc.Net.Client.Web" Version="2.35.0-pre1" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="5.0.4" />
+    <PackageReference Include="Grpc.Net.Client.Web" Version="2.35.0" />
     <PackageReference Include="protobuf-net.Grpc.ClientFactory" Version="1.0.147" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Model" />
   </ItemGroup>
 
   <ItemGroup>
