--- a/src/DynamicTable.Grpc/DynamicTable.Grpc.csproj
+++ b/src/DynamicTable.Grpc/DynamicTable.Grpc.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
-        <TargetFramework>net5.0</TargetFramework>
+        <TargetFramework>net6.0</TargetFramework>
     </PropertyGroup>
 
     <ItemGroup>
@@ -13,10 +13,10 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Grpc.AspNetCore" Version="2.35.0" />
-        <PackageReference Include="Grpc.AspNetCore.Web" Version="2.35.0" />
-        <PackageReference Include="protobuf-net.Grpc.AspNetCore" Version="1.0.147" />
-        <PackageReference Include="protobuf-net.Grpc.AspNetCore.Reflection" Version="1.0.147" />
+        <PackageReference Include="Grpc.AspNetCore" Version="2.40.0-pre1" />
+        <PackageReference Include="Grpc.AspNetCore.Web" Version="2.40.0-pre1" />
+        <PackageReference Include="protobuf-net.Grpc.AspNetCore" Version="1.0.152" />
+        <PackageReference Include="protobuf-net.Grpc.AspNetCore.Reflection" Version="1.0.152" />
     </ItemGroup>
 
 </Project>
