完成一半的翻页功能

--- a/src/DynamicTable.Wasm/DynamicTable.Wasm.csproj
+++ b/src/DynamicTable.Wasm/DynamicTable.Wasm.csproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="..\DynamicTable.Shared\DynamicTable.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Compoents" />
+  </ItemGroup>
+
 </Project>
